--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.24.0",
-    "@google/genai": "^1.17.0",
+    "@google/generative-ai": "^0.24.1",
     "openai": "^4.50.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
