feat: AI 모델 및 스토리보드 기능 개선
- .gitignore 파일에서 불필요한 항목 제거 및 정리
- App.tsx에서 API 키 관련 코드 정리 및 새로운 Gemini 서비스 통합
- constants.ts에서 AI 모델 목록 업데이트: Gemini 2.5 Flash, Imagen 4.0 등 추가
- sampleData.ts에서 샘플 스토리 아이디어 데이터 업데이트
- 비디오 및 이미지 생성 관련 컴포넌트에서 새로운 기능 추가 및 개선
- 언어 설정 및 API 키 관리 기능 개선

이제 사용자는 최신 AI 모델을 활용하여 더욱 향상된 스토리보드 생성 경험을 할 수 있습니다.

--- a/package.json
+++ b/package.json
@@ -6,20 +6,25 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check-ai-models": "tsx scripts/checkModelUpdates.ts --check",
+    "update-ai-models": "tsx scripts/checkModelUpdates.ts --update",
+    "update-ai-docs": "tsx scripts/checkModelUpdates.ts --docs",
+    "ai-model-report": "tsx scripts/checkModelUpdates.ts --report",
+    "check-sdk-versions": "tsx scripts/checkSDKVersions.ts",
+    "update-sdks": "npm update && npm audit fix",
+    "full-update-check": "npm run check-ai-models && npm run check-sdk-versions"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.24.0",
     "@google/generative-ai": "^0.24.1",
-    "openai": "^4.50.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "replicate": "^0.30.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "tsx": "^4.7.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
