--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ dist
 dist-ssr
 *.local
 
+# AI Models folder (large files)
+Models/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
