feat: 비주얼 아트 설정 및 AI 모델 통합 기능 개선
- VisualArtConfig 인터페이스 추가 및 VisualArtState에서 효과를 설정하는 방식 변경
- VisualArtGenerator 컴포넌트에 고급 설정 토글 기능 추가
- 다양한 AI 모델 옵션을 constants.ts에 추가하여 사용자 선택 가능
- AIService에 MistralService 통합 및 모델 선택 로직 개선
- 사용자 인터페이스에서 고급 설정 관련 텍스트 및 번역 추가

이제 사용자는 비주얼 아트 생성 시 더욱 세밀한 설정을 통해 다양한 AI 모델을 활용할 수 있습니다.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "full-update-check": "npm run check-ai-models && npm run check-sdk-versions"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.63.0",
     "@google/generative-ai": "^0.24.1",
+    "@mistralai/mistralai": "^1.10.0",
+    "openai": "^5.22.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "uuid": "^13.0.0"
@@ -24,6 +27,9 @@
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "tsx": "^4.7.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
