feat: AI 모델 목록 및 문서 업데이트
- constants.ts에서 OpenAI 및 Anthropic 모델 목록을 최신 정보로 업데이트: GPT-5 시리즈, Claude Opus 4.1 등 추가
- package.json에 모델 검증 스크립트 추가
- MODEL_CHANGELOG.md에서 최신 모델 정보 및 자동 확인 스크립트 개선 필요성 언급

이제 사용자는 최신 AI 모델 정보를 활용할 수 있으며, 모델 검증 프로세스가 개선되었습니다.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "ai-model-report": "tsx scripts/checkModelUpdates.ts --report",
     "check-sdk-versions": "tsx scripts/checkSDKVersions.ts",
     "update-sdks": "npm update && npm audit fix",
-    "full-update-check": "npm run check-ai-models && npm run check-sdk-versions"
+    "full-update-check": "npm run check-ai-models && npm run check-sdk-versions",
+    "verify-models": "tsx scripts/verifyModels.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.63.0",
