--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@anthropic-ai/sdk": "^0.63.0",
     "@google/generative-ai": "^0.24.1",
     "@mistralai/mistralai": "^1.10.0",
+    "idb": "^8.0.3",
     "openai": "^5.22.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
