--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@google/generative-ai": "^0.24.1",
     "@mistralai/mistralai": "^1.10.0",
     "idb": "^8.0.3",
+    "lucide-react": "^0.544.0",
     "openai": "^5.22.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "replicate": "^1.2.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
