--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@anthropic-ai/sdk": "^0.63.0",
     "@google/generative-ai": "^0.24.1",
     "@mistralai/mistralai": "^1.10.0",
+    "@types/three": "^0.180.0",
+    "axios": "^1.12.2",
     "idb": "^8.0.3",
     "lucide-react": "^0.544.0",
     "openai": "^5.22.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "replicate": "^1.2.0",
+    "three": "^0.180.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
